<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pwdstore" >

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/git_sync"
        android:title="@string/git_sync"/>
    <item android:id="@+id/git_pull"
        android:title="@string/git_pull"/>
    <item android:id="@+id/git_push"
        android:title="@string/git_push"/>

    <item android:id="@+id/refresh"
        android:title="@string/refresh_list" />

    <item android:id="@+id/user_pref"
        android:title="@string/action_settings"
        android:orderInCategory="100"/>
</menu>
