<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:pwstore="http://schemas.android.com/apk/res-auto"
    tools:context=".pwdstore" >

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          pwstore:showAsAction="ifRoom|collapseActionView"
          pwstore:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/menu_add_password"
        android:icon="@drawable/ic_action_new"
        pwstore:showAsAction="ifRoom"
        android:title="New password"/>

    <!--<item android:id="@+id/menu_add_category"-->
        <!--android:title="New category"/>-->

    <item android:id="@+id/git_sync"
        android:title="@string/git_sync"/>
    <item android:id="@+id/git_pull"
        android:title="@string/git_pull"/>
    <item android:id="@+id/git_push"
        android:title="@string/git_push"/>

    <item android:id="@+id/refresh"
        android:title="Refresh list"
        pwstore:showAsAction="never"
        android:icon="@drawable/ic_action_refresh"/>

    <item android:id="@+id/user_pref"
        android:title="Settings"
        android:orderInCategory="100"/>
</menu>

