<!--
  ~ Copyright © 2014-2021 The Android Password Store Authors. All Rights Reserved.
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?android:attr/colorBackground">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/app_icon"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="@dimen/onboarding_icon_margin_top"
      android:contentDescription="@string/app_icon_hint"
      android:src="@mipmap/ic_launcher"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/app_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="@dimen/fab_compat_margin"
      android:layout_marginEnd="@dimen/fab_compat_margin"
      android:text="@string/app_name"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
      android:textColor="@color/color_control_normal"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@id/app_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/app_icon"
      app:layout_constraintTop_toTopOf="@+id/app_icon" />

    <TextView
      android:id="@+id/repo_type"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="@dimen/fab_compat_margin"
      android:text="@string/select_n_repository_type"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
      android:textColor="@color/color_control_normal"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="@id/app_icon"
      app:layout_constraintTop_toBottomOf="@id/app_icon" />

    <TextView
      android:id="@+id/tv_repo_type_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/onboarding_desc_margin_top"
      android:layout_marginEnd="@dimen/fab_compat_margin"
      android:text="@string/select_repo_type_text"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
      android:textColor="@color/color_control_normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@id/repo_type"
      app:layout_constraintTop_toBottomOf="@id/repo_type" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/clone_remote"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="@dimen/onboarding_button_margin_top"
      android:layout_marginEnd="16dp"
      android:maxWidth="300dp"
      android:minWidth="100dp"
      android:text="@string/clone_remote_repo"
      app:layout_constraintBottom_toTopOf="@id/create_local"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_repo_type_text" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/create_local"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="128dp"
      android:maxWidth="300dp"
      android:minWidth="100dp"
      android:text="@string/create_local_repo"
      app:layout_constraintEnd_toEndOf="@id/clone_remote"
      app:layout_constraintStart_toStartOf="@id/clone_remote"
      app:layout_constraintTop_toBottomOf="@id/clone_remote" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
